--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+img {
+  display: block;
+  margin: 0 auto;
+}
+nav{
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  background-color: gray;
+}
+figcaption{
+  font-size: smaller;
+  text-align: center;
+}
+p #featured-property{
+  width: 800px;
+  text-align: center;
+}
+
+div #details{
+  float: left;
+  text-align: center;
+  background-color: aliceblue;
+  width: 25%;
+}
